--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,93 @@ body, html, #root {
   color: #fff;
   text-align: center;
 }
+.title{
+  color: #3C1C91;
+  text-align: center;
+}
+.title2{
+  color: #fff;
+  text-align: center;
+}
+.section{
+  padding: 30px;
+  justify-content: center;
+}
+
+.cards{
+  display: flex;
+  flex-direction: 'row';
+  margin: 0 10px;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+}
+.purpBtn2{
+  color: #C9F305;
+  /* text-align: center; */
+  background-color: #3C1C91;
+  font-weight: bold;
+}
+.blueBg{
+  background-color: #E1F5F4;
+}
+.rcnets{
+  padding: 30px 0;
+}
+.label {
+  color: #3C1C91;
+  font-size: 16px;
+  font-weight: bold;
+}
+.benefits{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  align-content: center;
+  justify-content: center;
+
+  color: #fff;
+  background-color: #3C1C91;
+  marginTop: 20px;
+  padding: 30px;
+  h5{
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    color: #3C1C91;
+  }
+  Button{
+    color: #3C1C91;
+    text-align: center;
+  }
+}
+.benefitsSection{
+  background-color: #3C1C91;
+  marginTop: 20px;
+  padding: 20px;
+}
+.benefitsCards{
+  display: flex;
+  flex-direction: 'row';
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+.benefitsCards2{
+  margin: 0 10px;
+  max-width: 400px;
+}
+
+//login
+.background-container {
+  background-image: url('./assets/backgrounds/RappsCourtsCOLLAGEdarker.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* background content */
+}
